Fix footer z-index

--- a/web-noter/static/scss/style.scss
+++ b/web-noter/static/scss/style.scss
@@ -923,6 +923,7 @@ footer {
 	padding-left: 15px;
 	padding-bottom: 25px;
 	min-height: 180px;
+	z-index: 3;
 }
 
 footer > div {
